# ml_engineering_best_practices

./: .dockerignore  .dvcignore  .gitignore  .pre-commit-config.yaml  404.html  Dockerfile  Makefile  README.md  docker-compose.clearml.yml  dvc.yaml  index.html  mkdocs.yml  objects.inv  params.yaml  pyproject.toml  sitemap.xml
.dvc/: .gitignore  config
.github/workflows/: docs.yml  reports.yml
GITHUB_PAGES_SETUP/: index.html
SETUP_INSTRUCTIONS/: index.html
clearml_data/elastic_7/indices/bkxLomu9RTCkfPo6kOCkvQ/0/_state/: retention-leases-23.st
clearml_local_setup/: index.html
configs/: config.yaml
configs/data/: default.yaml
configs/model/: gradient_boosting.yaml  logistic_regression.yaml  random_forest.yaml
configs/training/: default.yaml
data/processed/: features.csv.dvc  labels.csv.dvc
docs/: index.html  mkdocs.yml
docs/deployment/: index.html
docs/docs/: deployment.md  getting-started.md  index.md  reproducibility.md
docs/docs/api/: models.md  overview.md  utils.md
docs/docs/experiments/: results.md
docs/docs/reproducibility/: instructions.md
docs/experiments/results/: index.html
docs/getting-started/examples/: index.html
docs/getting-started/installation/: index.html
docs/reproducibility/instructions/: index.html
metrics/: data_download.json  features.json
models/: .gitignore  confusion_matrix.csv  feature_importance.csv  feature_importance_random_forest_eed7268d37274d37a54476d033b0042b.csv  feature_importance_random_forest_efc2b484fb764fa3ad6c0860a46b64bd.csv  metrics.json
outputs/2025-12-21/18-53-24/.hydra/: config.yaml  hydra.yaml
outputs/2025-12-21/18-57-50/.hydra/: hydra.yaml
outputs/2026-01-11/19-22-58/.hydra/: config.yaml  hydra.yaml
reports/: evaluation_report.json  hw1_report.md  hw2_report.md  hw3_report.md  hw4_report.md  hw5_report.md  hw6_report.md  pipeline_summary.json
reports/experiments/: experiment_report.md  experiment_report_accuracy_20251226_212741.md  experiment_report_f1_20251226_212741.md  experiment_report_summary_20251226_212741.md
scripts/: clearml_server_start.ps1  clearml_server_start.sh  clearml_setup.py  create_metrics_dirs.py  dvc_diff.py  dvc_init.py  generate_all_reports.py  generate_experiment_report.py  pixi_python.bat  run_pipeline.py
search/: search_index.json
site/: 404.html  index.html
site/deployment/: index.html
site/experiments/results/: index.html
site/getting-started/examples/: index.html
site/getting-started/installation/: index.html
site/reproducibility/instructions/: index.html
site/search/: search_index.json
src/: dataset.py  features.py  plots.py
src/churn_prediction/: __init__.py  clearml_local_config.py  config.py  data_versioning.py  model_registry.py  pipeline.py  pipeline_monitor.py  pipeline_scheduler.py
src/modeling/: clearml_utils.py  compare_models.py  config_schema.py  evaluate.py  experiments.py  predict.py  train.py  train_with_config.py  train_with_hydra.py
src/pipeline/: __init__.py  monitor.py
