[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "src"
version = "0.0.1"
description = "churn model"
authors = [
  { name = "Your name (or your organization/company/team)" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",

]
requires-python = "~=3.12.0"


[tool.ruff]
line-length = 99
src = ["src"]
include = ["pyproject.toml", "src/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["src"]
force-sort-within-sections = true

[tool.black]
line-length = 99
target-version = ["py312"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 99
known_first_party = ["src"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true

[[tool.mypy.overrides]]
module = [
    "kagglehub.*",
    "loguru.*",
    "typer.*",
    "yaml",
]
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = ["tests", ".venv", "venv", "env"]
skips = ["B101", "B601"]


[tool.pixi.project]
name = "ml_engineering_best_practices"
description = "churn model"
version = "0.1.0"
channels = ["conda-forge"]
platforms = ["linux-64", "osx-64", "osx-arm64", "win-64"]

[tool.pixi.dependencies]
python = "~=3.12.0"
ipython = "==8.25.0"
jupyterlab = "==4.1.5"
loguru = "==0.7.2"
matplotlib = ">=3.8.0,<4.0"
seaborn = ">=0.13.0"
notebook = "==7.1.1"
numpy = "==1.26.4"
pandas = "==2.2.1"
pytest = "==8.2.0"
ruff = "==0.3.4"
scikit-learn = "==1.4.2"
tqdm = "==4.66.4"
typer = "==0.12.3"
pip = ">=24.0,<25.0"

[tool.pixi.pypi-dependencies]
mkdocs = "==1.5.3"
python-dotenv = "==1.0.1"
kagglehub = "==0.2.2"
kaggle = "==1.6.14"
black = "==24.1.1"
isort = "==5.13.2"
mypy = "==1.8.0"
types-PyYAML = ">=6.0.0"
bandit = "==1.7.6"
pre-commit = "==3.6.0"
joblib = ">=1.3.2,<2.0"
dvc = ">=3.57.0"
dvc-s3 = "==3.1.0"
mlflow = ">=2.19.0"
clearml = ">=1.14.0"
psutil = ">=5.9.0"
hydra-core = ">=1.3.0"
omegaconf = ">=2.3.0"
pydantic = ">=2.0.0"

[tool.pixi.pypi-dependencies.src]
path = "."
editable = true

[tool.pixi.tasks]
# Install dependencies
requirements = "pixi install"

# Data pipeline
data = "python src/dataset.py"
features = "python src/features.py"
train = "python src/modeling/train.py"
pipeline-simple = "python src/dataset.py && python src/features.py && python src/modeling/train.py"

# Code quality
format = "ruff check --fix src/ && ruff format src/"
lint = "ruff format --check src/ && ruff check src/"
test = "python -m pytest tests/"

# Cleanup
clean = "python -c \"import os, glob, shutil; [os.remove(f) for f in glob.glob('**/*.pyc', recursive=True) if os.path.isfile(f)]; [shutil.rmtree(d) for d in glob.glob('**/__pycache__', recursive=True) if os.path.isdir(d)]\""

# Setup
setup = "pixi install && pre-commit install"

# DVC tasks
dvc-init = "python scripts/dvc_init.py"
dvc-track-data = "dvc add data/raw/customer_churn.csv data/processed/features.csv data/processed/labels.csv"
dvc-push = "dvc push"
dvc-pull = "dvc pull"
dvc-status = "dvc status"
dvc-check = "python -c \"import os, glob; dvc_files = glob.glob('**/*.dvc', recursive=True); print('DVC tracked files:'); [print(f'  {f}') for f in sorted(dvc_files)] if dvc_files else print('  No DVC files found')\""
dvc-diff = "python scripts/dvc_diff.py"

# MLflow tasks
mlflow-ui = "mlflow ui --backend-store-uri file:./mlruns --port 5000"

# ClearML tasks
clearml-setup = "python scripts/clearml_setup.py"
clearml-server-start = "powershell -ExecutionPolicy Bypass -File scripts/clearml_server_start.ps1"
clearml-server-start-unix = "bash scripts/clearml_server_start.sh"
clearml-server-logs = "docker compose -f docker-compose.clearml.yml logs -f"

# Churn prediction tasks
churn-download = "python src/dataset.py data/raw/customer_churn.csv"
churn-features = "python src/features.py data/raw/customer_churn.csv data/processed/features.csv data/processed/labels.csv"
churn-train = "python src/modeling/train.py"
churn-experiments = "python src/modeling/experiments.py"
churn-data-versioning = "python src/churn_prediction/data_versioning.py"
churn-model-registry = "python src/churn_prediction/model_registry.py"
churn-pipeline = "python src/churn_prediction/pipeline.py"

# Experiments
experiments = "python src/modeling/experiments.py"

# DVC Pipeline
dvc-repro = "dvc repro"
dvc-dag = "dvc dag"
pipeline = "python scripts/run_pipeline.py"
pipeline-monitor = "python -c \"from src.pipeline.monitor import PipelineMonitor; import json; m = PipelineMonitor(); print(json.dumps(m.get_summary(), indent=2))\""
